Implemented history page with titles,  added to front page

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -22,7 +22,7 @@
 
     <!-- tCF History Popup -->
     <div class="nav-item">
-      <a class="nav-link fa fa-clock-o" href="#"></a>
+      <a class="nav-link fa fa-clock-o" href="#historyPage" data-toggle="modal"></a>
     </div>
 
     <!-- tCF profile dropdown -->
