Added title to page

--- a/tcf_website/templates/common/history_page_modal.html
+++ b/tcf_website/templates/common/history_page_modal.html
@@ -1,4 +1,4 @@
-<!-- Login modal (imported in index.html) -->
+<!-- History page modal (imported in index.html) -->
 {% load static %}
 <div class="modal fade" id={{ path_id }} tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
      aria-hidden="true">
