--- a/tcf_website/templates/common/history_page_modal.html
+++ b/tcf_website/templates/common/history_page_modal.html
@@ -2,7 +2,7 @@
 {% load static %}
 <div class="modal fade" id={{ path_id }} tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
      aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Recently Viewed</h5>
