--- a/tcf_website/templates/qa/qa.html
+++ b/tcf_website/templates/qa/qa.html
@@ -276,6 +276,20 @@
                 </div>
             </div>
             {% endfor %}
+
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#questionCollapse" aria-expanded="false" aria-controls="questionCollapse">
+                Show more questions
+            </button>
+            <div class="collapse" id="questionCollapse">
+                aaa
+                {% for question in questions %}
+                <div class="card mb-2">
+                    <div class="card-body text-left">
+                        aaa
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
         </ul>
     </div>
 
@@ -357,4 +371,40 @@
         $(this).removeAttr('href');
     });
     {% endif %}
+
+    questionIDToHide = []
+    // document.getElementsByClassName("qa-heading")[0].style.visibility = "hidden";
+    // $('.qa-heading').each(function (i, obj) {
+    //     obj.hidden = true;
+    //     obj.style.display = "none";
+    //     obj.style.visibility = "hidden";
+    //     // if(i > 0)
+    //     //     questionIDToHide.push(obj.id);
+    // });
+    // document.write(questionIDToHide);
+</script>
+
+<!--collapse questions-->
+<script type="text/javascript">
+    //document.getElementsByClassName("qa-heading")[0].style.visibility = "hidden";
+    document.getElementsByClassName("qa-heading").array.forEach(element => {
+        element.style.visibility = "hidden";
+    });
+    // $('.qa-container').each(function (i, obj) {
+    //     obj.hidden = true;
+    //     obj.style.display = "none";
+    //     obj.style.visibility = "hidden";
+    //     // if(i > 0)
+    //     //     questionIDToHide.push(obj.id);
+    // });
+    document.write(".......");
+    // document.write(questionIDToHide);
+    
+    // console.log("*******");
+    // document.getElementsByClassName("question").array.forEach(element => {
+    //     document.write("...");
+    //     document.write(element.id);
+    // });
+    // document.write(document.getElementsByClassName("question")[0]);
+    // document.write(document);
 </script>
