--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -22,6 +22,9 @@
 
     <!-- tCF History Popup -->
     <div class="nav-item">
+      <span class="badge-history-page badge badge-pill badge-info ml-2">New</span>
+    </div>
+    <div class="nav-item">
       <a class="nav-link fa fa-clock-o" href="#historyPage" data-toggle="modal"></a>
     </div>
 
