--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -248,10 +248,10 @@
 
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" id="reviewsTab" data-toggle="tab" href="#reviewsTabContent">Reviews</a>
+                <a class="nav-link active" id="reviewsTab" data-toggle="tab" href="#reviewsTabContent" style="font-size: 18px;">Reviews</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="qaTab" data-toggle="tab" href="#qaTabContent">Q&A
+                <a class="nav-link" id="qaTab" data-toggle="tab" href="#qaTabContent" style="font-size: 18px;">Q&A
                     <span class="badge badge-pill badge-info ml-2">New</span>
                 </a>
             </li>
