--- a/tcf_website/templates/qa/qa.html
+++ b/tcf_website/templates/qa/qa.html
@@ -277,7 +277,7 @@
                                 </div>
                                 <div class="d-flex justify-content-end">
                                     <a data-toggle="modal" data-target="#answer-question-modal" data-id="{{ question.id }}"
-                                        class="btn bg-tcf-orange text-white justify-content-end mt-3"
+                                        class="btn bg-tcf-orange text-white justify-content-end mt-3 answerQuestionBtn"
                                         id="answerQuestionBtn">
                                         Answer this Question!
                                     </a>
