--- a/tcf_website/templates/qa/qa.html
+++ b/tcf_website/templates/qa/qa.html
@@ -267,12 +267,37 @@
                                                 {% endfor %}
                                                 </div>
                                                 <div class="collapse" id="answerCollapse{{question.id}}"></div>
-                                                {% if answer_list|length > 1 %}
+                                                <!-- {% if answer_list|length > 1 %} -->
                                                 <hr>
-                                                <div class="d-flex justify-content-center collapse-answer-button" id="collapse-answer-button{{question.id}}" value="show" type="button" data-toggle="collapse" data-target="#answerCollapse{{question.id}}" aria-expanded="false" aria-controls="answerCollapse{{question.id}}">
+                                                <!-- <div class="d-flex justify-content-center collapse-answer-button" id="collapse-answer-button{{question.id}}" value="show" type="button" data-toggle="collapse" data-target="#answerCollapse{{question.id}}" aria-expanded="false" aria-controls="answerCollapse{{question.id}}">
+                                                    <button class="btn bg-tcf-orange text-white" id="collapse-answer-chevron{{question.id}}">View more answers here</button>
+                                                </div> -->
+                                                <!-- <div class="d-flex justify-content-center collapse-answer-button" id="collapse-answer-button{{question.id}}" value="show" type="button" data-toggle="collapse" data-target="#answerCollapse{{question.id}}" aria-expanded="false" aria-controls="answerCollapse{{question.id}}">
                                                     <i class="fa fa-chevron-down fa-lg text-center text-muted collapse-answer-chevron" id="collapse-answer-chevron{{question.id}}"></i>
+                                                </div> -->
+                                                <!-- {% endif %} -->
+
+                                                <div class="row d-flex justify-content-between">
+                                                    
+                                                    <!-- <div class="d-flex justify-content-between"> -->
+                                                        {% if answer_list|length > 1 %}
+                                                        <div class="d-flex collapse-answer-button" id="collapse-answer-button{{question.id}}" value="show" type="button" data-toggle="collapse" data-target="#answerCollapse{{question.id}}" aria-expanded="false" aria-controls="answerCollapse{{question.id}}">
+                                                            <button class="btn text-tcf-orange hover-tcf-orange mt-3 collapse-answer-chevron" id="collapse-answer-chevron{{question.id}}" style="border-color: var(--accent-color)">View more answers here</button>
+                                                        </div>
+                                                        <!-- <div class="d-flex justify-content-center collapse-answer-button" id="collapse-answer-button{{question.id}}" value="show" type="button" data-toggle="collapse" data-target="#answerCollapse{{question.id}}" aria-expanded="false" aria-controls="answerCollapse{{question.id}}">
+                                                            <i class="fa fa-chevron-down fa-lg text-center text-muted collapse-answer-chevron" id="collapse-answer-chevron{{question.id}}"></i>
+                                                        </div> -->
+                                                        {% else %}
+                                                        <div></div>
+                                                        {% endif %}
+                                                        <a href="#loginModal" data-toggle="modal" data-id="{{ question.id }}"
+                                                            class="btn bg-tcf-orange text-white justify-content-end mt-3 answerQuestionBtn"
+                                                            id="answerQuestionBtn">
+                                                            Answer this Question!
+                                                        </a>
+                                                    <!-- </div> -->
                                                 </div>
-                                                {% endif %}
+
                                                 {% endif %}
                                                 {% endfor %}
                                             </div>
@@ -280,13 +305,20 @@
                                     </div>
                                     
                                 </div>
-                                <div class="d-flex justify-content-end">
-                                    <a href="#loginModal" data-toggle="modal" data-id="{{ question.id }}"
-                                        class="btn bg-tcf-orange text-white justify-content-end mt-3 answerQuestionBtn"
-                                        id="answerQuestionBtn">
-                                        Answer this Question!
-                                    </a>
-                                </div>
+                                <!-- <div class="row">
+                                    {% if answer_list|length > 1 %}
+                                    <div class="d-flex justify-content-start collapse-answer-button" id="collapse-answer-button{{question.id}}" value="show" type="button" data-toggle="collapse" data-target="#answerCollapse{{question.id}}" aria-expanded="false" aria-controls="answerCollapse{{question.id}}">
+                                        <button class="btn bg-tcf-orange text-white justify-content-start" id="collapse-answer-chevron{{question.id}}">View more answers here</button>
+                                    </div>
+                                    {% endif %}
+                                    <div class="d-flex justify-content-end">
+                                        <a href="#loginModal" data-toggle="modal" data-id="{{ question.id }}"
+                                            class="btn bg-tcf-orange text-white justify-content-end mt-3 answerQuestionBtn"
+                                            id="answerQuestionBtn">
+                                            Answer this Question!
+                                        </a>
+                                    </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -310,6 +342,7 @@
     {% if questions|length > 3 %}
         <div class="card justify-content-center bg-tcf-shadow" id="collapse-qa-button" value="show" type="button" data-toggle="collapse" data-target="#questionCollapse" aria-expanded="false" aria-controls="questionCollapse">
                 <i class="fa fa-chevron-down fa-lg text-center text-white" id="collapse-chevron"></i>
+                <!-- <button class="btn bg-tcf-orange text-white">View more here</button> -->
         </div>
     {% endif %}
     <!--button class="btn btn-primary" id="collapse-qa-button" value="show" type="button" data-toggle="collapse" data-target="#questionCollapse" aria-expanded="false" aria-controls="questionCollapse">
@@ -395,10 +428,10 @@
         });
         $(this).removeAttr('href');
     });
-    $('.collapse-answer-button').each(function () {
-        $(this).click(() => {
-            $("i", this).toggleClass("fa-chevron-down fa-chevron-up");
-        });
-    });
+    // $('.collapse-answer-button').each(function () {
+    //     $(this).click(() => {
+    //         $("i", this).toggleClass("fa-chevron-down fa-chevron-up");
+    //     });
+    // });
     {% endif %}
 </script>
