--- a/tcf_website/templates/qa/qa.html
+++ b/tcf_website/templates/qa/qa.html
@@ -339,12 +339,24 @@
             <div class="collapse" id="questionCollapse"></div>
         </ul>
     </div>
-    {% if questions|length > 3 %}
-        <div class="card justify-content-center bg-tcf-shadow" id="collapse-qa-button" value="show" type="button" data-toggle="collapse" data-target="#questionCollapse" aria-expanded="false" aria-controls="questionCollapse">
-                <i class="fa fa-chevron-down fa-lg text-center text-white" id="collapse-chevron"></i>
-                <!-- <button class="btn bg-tcf-orange text-white">View more here</button> -->
-        </div>
-    {% endif %}
+    <div class="d-flex justify-content-center">
+        {% if questions|length > 3 %}
+        <!-- <div class="d-flex justify-content-center col-6" id="collapse-qa-button" value="show" type="button" data-toggle="collapse" data-target="#questionCollapse" aria-expanded="false" aria-controls="questionCollapse">
+                
+                <button class="btn text-tcf-orange hover-tcf-orange bg-white col-12" id="collapse-chevron" style="border-color: var(--accent-color)">
+                    <i class="fa fa-chevron-down fa-lg text-center text-tcf-orange"></i>
+                </button>
+        </div> -->
+
+        <!-- <div class="d-flex justify-content-center col-6" id="collapse-qa-button" value="show" type="button" data-toggle="collapse" data-target="#questionCollapse" aria-expanded="false" aria-controls="questionCollapse"> -->
+                
+            <button class="btn text-tcf-orange hover-tcf-orange bg-white col-6" id="collapse-qa-button" value="show" type="button" data-toggle="collapse" data-target="#questionCollapse" aria-expanded="false" aria-controls="questionCollapse" style="border-color: var(--accent-color)">
+                <i class="fa fa-chevron-down fa-lg text-center text-tcf-orange" id="collapse-chevron"></i>
+            </button>
+        <!-- </div> -->
+        {% endif %}
+    </div>
+    
     <!--button class="btn btn-primary" id="collapse-qa-button" value="show" type="button" data-toggle="collapse" data-target="#questionCollapse" aria-expanded="false" aria-controls="questionCollapse">
         Show All Questions
     </button-->
