--- a/tcf_website/templates/about/history.html
+++ b/tcf_website/templates/about/history.html
@@ -43,6 +43,10 @@
         leadership of Brian Yu, Sai Konuri, Brad Knaysi, and Jennifer Long, theCourseForum
         was re-built from scratch using the Python web-framework Django.
       </p>
+      <p>
+        The new site was completed in Fall 2020 with a team led by Jennifer Long, Alex Shen, Jack Liu,
+        Jules Le Menestrel, and Vi Nguyen.
+      </p>
     </div>
   </div>
 </div>
