Revert "Updated and added banner for applications"
This reverts commit d2bbd0a7c58f19640b2123265a88a5617f6488e2.

--- a/tcf_website/templates/common/application_banner.html
+++ b/tcf_website/templates/common/application_banner.html
@@ -2,15 +2,15 @@
      class="alert alert-info alert-dismissible text-left fade show">
   <h4 class="alert-heading">Apply to the team!</h4>
   <p>
-    Our Fall 2023 recruitment has started up! We are looking for UVA students for both our dev and design/marketing teams
-    who are committed to helping make the site better. Come to our interest meeting this <b><u>Friday (9/1) 6pm in Clark 107</u></b>
+    Our Fall 2022 recruitment has started up! We are looking for UVA students for both our dev and design/marketing teams 
+    who are committed to helping make the site better. Come to our interest meeting this <b><u>Thursday (9/1) 7pm in Olsson 120</u></b> 
     for more information about the team and open positions!
     <!-- Students of any year, background, and experience are welcome to apply. -->
   </p>
   <hr>
   <p class="mb-0 text-inline">
     To learn more and join the team, submit an application!
-    <a href="https://forms.gle/jZdSMhD3jpZrJrsW9" class="btn btn-sm btn-info ml-2">
+    <a href="https://forms.gle/pnz9drH8oj1PGvha6" class="btn btn-sm btn-info ml-2">
       Apply here <i class="fa fa-arrow-right" aria-hidden="true"></i>
     </a>
   </p>
