ddos: temporarily remove feedback in sidebar

--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -336,7 +336,7 @@
 {% endblock %}
 
 {% block js %}
-    <script type="module" src="{% static 'landing/feedbackform.js' %}"></script>
+    <!-- <script type="module" src="{% static 'landing/feedbackform.js' %}"></script> -->
     <script type="text/javascript">
         // Update copyright year at the bottom of landing page
         $(".year").text(new Date().getFullYear());
