making links accessible

--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -79,17 +79,17 @@
   <div class="footer text-center small">
     <ul class="icon-section">
       <li class="icon-wrapper left-icon">
-          <a href="https://discord.gg/tAjzH7eyvW">
+          <a href="https://discord.gg/tAjzH7eyvW" aria-label="theCourseForum Discord">
               <i class="fab fa-discord fa-fw"></i>
           </a>
       </li>
       <li class="icon-wrapper left-icon">
-          <a href="https://www.facebook.com/thecourseforum">
+          <a href="https://www.facebook.com/thecourseforum" aria-label="theCourseForum Facebook">
               <i class="fab fa-facebook fa-fw"></i>
           </a>
       </li>
       <li class="icon-wrapper right-icon">
-          <a href="https://www.instagram.com/thecourseforum_uva/">
+          <a href="https://www.instagram.com/thecourseforum_uva/" aria-label="theCourseForum Instagram">
               <i class="fab fa-instagram fa-fw"></i>
           </a>
       </li>
