toggle menu aria-label

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -16,7 +16,7 @@
     {% include "search/searchbar.html" %}
 
     <!-- tCF navbar toggler -->
-    <button class="navbar-toggler menu" id="menu-toggle">
+    <button class="navbar-toggler menu" id="menu-toggle" aria-label="Toggle menu">
       <span class="navbar-toggler-icon"></span>
     </button>
 
