updated logo file format to svg

--- a/tcf_website/templates/404.html
+++ b/tcf_website/templates/404.html
@@ -11,7 +11,7 @@
   style="position: relative; transform: translateY(100%)"
 >
   <img
-    src="{% static 'base/img/new_logo.png' %}"
+    src="{% static 'base/img/new_logo.svg' %}"
     alt="theCourseForum logo"
     height="200px"
   />
