--- a/tcf_website/templates/login/login_modal.html
+++ b/tcf_website/templates/login/login_modal.html
@@ -12,7 +12,7 @@
             </div>
             <div class="modal-body">
                 <div class="d-flex justify-content-center">
-                    <img src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum logo"
+                    <img src="{% static 'base/img/new_logo.svg' %}" alt="theCourseForum logo"
                          height="150px">
                 </div>
                 <div class="text-center">
