--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -13,7 +13,7 @@
   <div class="card">
     <div class="card-body">
       <div class="about-logo">
-        <img src="{% static 'base/img/new_logo.png' %}" height="150px">
+        <img src="{% static 'base/img/new_logo.svg' %}" height="150px">
         <div class="tagline">
           <h1>theCourseForum</h1>
           <p>connecting you to the courses you love.</p>
