--- a/tcf_website/templates/about/logo-tagline.html
+++ b/tcf_website/templates/about/logo-tagline.html
@@ -1,7 +1,7 @@
 <!-- Logo with name & tagline, import where needed -->
 {% load static %}
 <div class="about-logo row justify-content-center">
-  <img src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum logo"
+  <img src="{% static 'base/img/new_logo.svg' %}" alt="theCourseForum logo"
        height="150px">
   <div class="tagline text-left pl-3 pt-3">
     <h1>theCourseForum</h1>
