--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -8,7 +8,7 @@
     <title>{% block title %}theCourseForum{% endblock %}</title>
     <link rel="icon"
       type="image/png"
-      href="{% static 'base/img/new_logo.png' %}">
+      href="{% static 'base/img/new_logo.svg' %}">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
