--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -23,7 +23,7 @@
     <div class="container">
       <!-- tCF logo -->
       <a class="navbar-brand logo-container" href="/">
-        <img class="logo" src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum logo">
+        <img class="logo" src="{% static 'base/img/new_logo.svg' %}" alt="theCourseForum logo">
         <h4 class="text-tcf-indigo ml-2">theCourseForum</h4>
       </a>
 
@@ -58,7 +58,7 @@
         <div class="row">
             <div class="col-xl-8 mx-auto py-4">
                 <div class="about-logo row justify-content-center">
-                    <img src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum logo"
+                    <img src="{% static 'base/img/new_logo.svg' %}" alt="theCourseForum logo"
                          height="150px">
                     <div class="tagline text-left pt-3">
                         <h1>theCourseForum</h1>
