--- a/tcf_website/templates/login/extra_info_form.html
+++ b/tcf_website/templates/login/extra_info_form.html
@@ -6,7 +6,7 @@
 <div class="container-fluid col-lg-9 col-xl-7 justify-content-center">
   <div class="card text-center">
     <div class="card-body p-5">
-        <img style="width: auto; height: 5em;" src="{% static 'base/img/new_logo.png' %}" class="card-img-top" alt="tCF">
+        <img style="width: auto; height: 5em;" src="{% static 'base/img/new_logo.svg' %}" class="card-img-top" alt="tCF">
         {% block login_content %}
         <h2 class="card-title">Welcome to theCourseForum!</h2>
         <p> Please finish completing your profile. </p>
