svg logo changes

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -9,14 +9,14 @@
 
     <!-- tCF logo -->
     <a class="navbar-brand logo-container mx-auto" href="/">
-      <img class="logo" src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum home">
+      <img class="logo" src="{% static 'base/img/new_logo.svg' %}" alt="theCourseForum home">
     </a>
 
     <!-- tCF search -->
     {% include "search/searchbar.html" %}
 
     <!-- tCF navbar toggler -->
-    <button class="navbar-toggler menu" id="menu-toggle">
+    <button class="navbar-toggler menu" id="menu-toggle" aria-label="Toggle menu">
       <span class="navbar-toggler-icon"></span>
     </button>
 
