Add D&M people to the site w/ LinkedIns #548
Completed adding the LinkedIn logo to the D&M team. D&M team members will have to add their own linkedin links within the json file.

--- a/tcf_website/templates/about/current_team.html
+++ b/tcf_website/templates/about/current_team.html
@@ -69,7 +69,11 @@
                 <div class="card-body">
                   <h5 class="card-text">{{ member.name }}</h5>
                   <p class="card-text small text-muted">Class of {{ member.class }}</p>
+                  <a class="text-muted" href="{{ member.linkedin }}">
+                    <h4><i class="fa fa-linkedin-square"></i></h4>
+                  </a>
                 </div>
+              
               </div>
             </div>
           {% endfor %}
