--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -23,7 +23,7 @@
         <hr>
       </a>
       {% else %}
-      <a href="#newReviewLoginModal" data-toggle="modal"
+      <a href="#loginModal" data-toggle="modal"
        class="list-group-item list-group-item-action pb-0
        {% if request.resolver_match.url_name == 'new_review' %}active{% endif %}">
         <h4><i class="fa fa-pencil-square-o fa-fw"></i></h4>
